Configuracion de rutas para Gateway Server con application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,15 @@ server.port=8090
 
 #BALANCEADOR DE CARGA CON EUREKA
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+
+#Configuración de rutas usando application.properties (Usar esta ó application.yml)
+#spring.cloud.gateway.routes[0].id=microservicio-product
+#spring.cloud.gateway.routes[0].uri=lb://microservicio-product
+#spring.cloud.gateway.routes[0].predicates=Path=/api/products/**
+#spring.cloud.gateway.routes[0].filters=StripPrefix=2
+     
+#spring.cloud.gateway.routes[1].id=microservicio-items
+#spring.cloud.gateway.routes[1].uri=lb://microservicio-items
+#spring.cloud.gateway.routes[1].predicates=Path=/api/items/**
+#spring.cloud.gateway.routes[1].filters=StripPrefix=2 
