--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
         - Path=/api/products/**
         filters:
         - StripPrefix=2
+        - name: SampleCookie
+          args: 
+            name: user
+            value: Juan
+            message: Mensaje personalizado para productos.
       - id: microservicio-items
         uri: lb://microservicio-items
         predicates:
