Implementacion de Filtros Gateway Factory de fabrica
Doc: https://docs.spring.io/spring-cloud-gateway/reference/spring-cloud-gateway/gatewayfilter-factories.html

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,7 @@ spring:
         - Path=/api/items/**
         filters:
         - StripPrefix=2
+        - AddRequestHeader=token-request, nmasjasjma
+        - AddResponseHeader=token-response, as123123123
+        - AddRequestParameter=name, Juan
+        - SetResponseHeader=Content-type, text/plain
