Request Predicates Factory de fabrica
Doc: https://docs.spring.io/spring-cloud-gateway/reference/spring-cloud-gateway/request-predicates-factories.html

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,11 @@ spring:
         uri: lb://microservicio-product
         predicates:
         - Path=/api/products/**
+        # - Header=token, 12345
+        # - Method=GET, POST
+        # - Query=color
+        # - Cookie=color, azul
+        # - Header=Content-Type, application/json
         filters:
         - StripPrefix=2
         - name: SampleCookie
