--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,24 @@
+resilience4j:
+  circuitbreaker:
+    configs:
+      defecto:
+        sliding-window-size: 6
+        failure-rate-threshold: 50
+        wait-duration-in-open-state: 20s
+        permitted-number-of-calls-in-half-open-state: 4
+        slow-call-duration-threshold: 3s
+        slow-call-rate-threshold: 50
+    instances:
+      products:
+        base-config: defecto
+  timelimiter:
+    configs:
+      defecto:
+        timeout-duration: 4s
+    instances:
+      products:
+        base-config: defecto
+
 spring:
   cloud:
     gateway:
@@ -12,6 +33,11 @@ spring:
         # - Cookie=color, azul
         # - Header=Content-Type, application/json
         filters:
+        - name: CircuitBreaker
+          args:
+            name: products
+            statusCodes: 500
+            fallbackUri: forward:/api/items
         - StripPrefix=2
         - name: SampleCookie
           args: 
