--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=gateway-server
 server.port=8090
 
 #BALANCEADOR DE CARGA CON EUREKA
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
 
 
 #Configuración de rutas usando application.properties (Usar esta ó application.yml)
